--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "ngx-scrollbar": "^15.0.1",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
